# GroundsWreckers

csv/: landmarks.csv  odom.csv  odom_filterd.csv
csv/firstfloor_hallway/: landmarks.csv  odom.csv  results.mat
csv/firstfloor_loop/: landmarks.csv  odom.csv  results.mat
solver/Results/extended_loop1/: results.mat
solver/Results/firstfloor_hallway/: landmarks.csv  results.mat
solver/Results/firstfloor_loop/: results.mat
solver/Results/firstfloor_ransac/: ransac_transform.mat
solver/Results/outer_loop4/: results.mat
solver/nonlinear/: H21.mat  create_Ab_nonlinear.m  error_nonlinear.m  gauss_newton.m  meas_landmark.m  meas_landmark_jacobian.m  meas_odom.m  meas_odom_z.m  project_measurement.m  run.m  slam_2D_nonlinear.m  solve_linear_system.m  transform.m  update_plot.m
solver/util/: format_solution.m
src/apriltags_ros/apriltags_ros/: CMakeLists.txt
src/landmark_processing/: CMakeLists.txt  package.xml
src/landmark_processing/src/: landmark_processing.cpp
src/launch/: example.launch  parse_odom_filtered.launch  parse_the_world.launch
src/motion_decoder/: CMakeLists.txt  package.xml
src/motion_decoder/include/motion_decoder/: image_converter.hpp
src/motion_decoder/launch/: hector_apriltag.launch  hector_camera.launch  motion_decoder_april.launch  motion_decoder_camera.launch
src/motion_decoder/src/: motion_decoder.cpp
src/odom_filt_processing/: CMakeLists.txt  package.xml
src/odom_filt_processing/src/: odom_filt_processing.cpp
src/odom_processing/: CMakeLists.txt  package.xml
src/odom_processing/src/: odom_processing.cpp
